fix almost invisible buttons on options page, closes #297

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -390,7 +390,7 @@ div.ui-tooltip {
     height: 150px;
 }
 
-.btn:not(.btn-primary):not(.btn-danger) {
+.btn:not(.btn-primary):not(.btn-secondary):not(.btn-danger) {
     border-color: #ddd;
     background-color: #eee;
 }
